--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@
 @import 'screens/setting.css';
 @import 'screens/chat.css';
 body {
-  font-family: cursive;
-  /*-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif*/
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
